Enhance GPU configuration validation and add core functionality tests