@@ -3,6 +3,7 @@ package org.apache.opennlp.gpu.integration;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -34,9 +35,9 @@ import org.apache.opennlp.gpu.test.GpuTestSuite;
  * References: Apache OpenNLP 2.5.8 API; project ARCHITECTURE_OVERVIEW.md.
  */
 public class OpenNLPTestDataIntegration {
-    
+
     private static final GpuLogger logger = GpuLogger.getLogger(OpenNLPTestDataIntegration.class);
-    
+
     // OpenNLP model URLs (using Apache mirrors)
     private static final String BASE_URL = "https://dlcdn.apache.org/opennlp/models/";
     private static final String[] MODEL_URLS = {
@@ -44,68 +45,68 @@ public class OpenNLPTestDataIntegration {
         BASE_URL + "ud-models-1.0/opennlp-en-ud-ewt-tokens-1.0-1.9.3.bin",
         BASE_URL + "ud-models-1.0/opennlp-en-ud-ewt-pos-1.0-1.9.3.bin"
     };
-    
+
     // Test data sources
     private static final String SAMPLE_TEXT_URL = "https://raw.githubusercontent.com/apache/opennlp/main/opennlp-tools/src/test/resources/opennlp/tools/sentdetect/Sentences.txt";
-    
+
     private final Path testDataDir;
     private final GpuConfig config;
-    
+
     public OpenNLPTestDataIntegration() {
         this.testDataDir = Paths.get("target/test-data");
         this.config = new GpuConfig();
         config.setGpuEnabled(true);
-        
+
         try {
             Files.createDirectories(testDataDir);
         } catch (IOException e) {
             logger.error("Failed to create test data directory: " + e.getMessage());
         }
     }
-    
+
     /**
      * Download and test with real OpenNLP models
      */
     public void runRealModelTests() {
         logger.info("🔍 Running integration tests with real OpenNLP models");
-        
+
         try {
             // Download test data
             List<String> sampleTexts = downloadSampleTexts();
-            
+
             if (sampleTexts.isEmpty()) {
                 logger.warn("No sample texts available, generating synthetic data");
                 sampleTexts = generateSyntheticTestData();
             }
-            
+
             // Test with different data sizes
             testWithVaryingDataSizes(sampleTexts);
-            
+
             // Test performance comparison
             performanceComparisonTest(sampleTexts);
-            
+
             // Test batch processing
             batchProcessingTest(sampleTexts);
-            
+
             logger.info("✅ Real model integration tests completed");
-            
+
         } catch (Exception e) {
             logger.error("Integration test failed: " + e.getMessage());
             e.printStackTrace();
         }
     }
-    
+
     private List<String> downloadSampleTexts() {
         List<String> texts = new ArrayList<String>();
-        
+
         try {
             logger.info("Downloading sample texts from OpenNLP repository...");
-            
-            URL url = new URL(SAMPLE_TEXT_URL);
+
+            URL url = URI.create(SAMPLE_TEXT_URL).toURL();
             try (BufferedReader reader = new BufferedReader(new InputStreamReader(url.openStream()))) {
                 String line;
                 StringBuilder currentText = new StringBuilder();
-                
+
                 while ((line = reader.readLine()) != null) {
                     line = line.trim();
                     if (line.isEmpty()) {
@@ -117,27 +118,27 @@ public class OpenNLPTestDataIntegration {
                         currentText.append(line).append(" ");
                     }
                 }
-                
+
                 if (currentText.length() > 0) {
                     texts.add(currentText.toString());
                 }
             }
-            
+
             logger.info("Downloaded " + texts.size() + " sample texts");
-            
+
         } catch (IOException e) {
             logger.warn("Failed to download sample texts: " + e.getMessage());
             logger.info("Will use synthetic test data instead");
         }
-        
+
         return texts;
     }
-    
+
     private List<String> generateSyntheticTestData() {
         logger.info("Generating synthetic test data for OpenNLP integration");
-        
+
         List<String> texts = new ArrayList<String>();
-        
+
         // Generate realistic NLP test sentences
         String[] templates = {
             "The %s %s quickly %s over the %s %s.",
@@ -146,24 +147,24 @@ public class OpenNLPTestDataIntegration {
             "Machine learning algorithms %s %s when %s with %s datasets.",
             "The %s %s %s demonstrated %s performance improvements in %s tasks."
         };
-        
+
         String[] adjectives = {"quick", "brown", "smart", "efficient", "advanced", "modern", "sophisticated", "innovative"};
         String[] nouns = {"fox", "dog", "system", "algorithm", "model", "network", "processor", "computer"};
         String[] verbs = {"jumps", "runs", "processes", "analyzes", "computes", "executes", "performs", "optimizes"};
         String[] technical = {"GPU", "CPU", "neural", "deep", "machine", "artificial", "parallel", "distributed"};
-        
+
         for (int i = 0; i < 100; i++) {
             String template = templates[i % templates.length];
             String sentence = String.format(template,
                 adjectives[i % adjectives.length],
-                nouns[i % nouns.length], 
+                nouns[i % nouns.length],
                 verbs[i % verbs.length],
                 technical[i % technical.length],
                 nouns[(i + 1) % nouns.length]
             );
             texts.add(sentence);
         }
-        
+
         // Add some longer paragraphs
         for (int i = 0; i < 20; i++) {
             StringBuilder paragraph = new StringBuilder();
@@ -172,7 +173,7 @@ public class OpenNLPTestDataIntegration {
                 String sentence = String.format(template,
                     adjectives[(i + j) % adjectives.length],
                     nouns[(i + j) % nouns.length],
-                    verbs[(i + j) % verbs.length], 
+                    verbs[(i + j) % verbs.length],
                     technical[(i + j) % technical.length],
                     nouns[(i + j + 1) % nouns.length]
                 );
@@ -180,42 +181,42 @@ public class OpenNLPTestDataIntegration {
             }
             texts.add(paragraph.toString().trim());
         }
-        
+
         logger.info("Generated " + texts.size() + " synthetic test texts");
         return texts;
     }
-    
+
     private void testWithVaryingDataSizes(List<String> sampleTexts) {
         logger.info("Testing GPU acceleration with varying data sizes...");
-        
+
         GpuModelFactory factory = new GpuModelFactory(config);
-        
+
         // Test with different dataset sizes
         int[] testSizes = {10, 50, 100, 200, 500};
-        
+
         for (int size : testSizes) {
             if (size > sampleTexts.size()) continue;
-            
+
             List<String> subset = sampleTexts.subList(0, size);
             String[] textArray = subset.toArray(new String[subset.size()]);
-            
+
             logger.info("Testing with " + size + " documents...");
-            
+
             // Test feature extraction performance
             long startTime = System.currentTimeMillis();
             testFeatureExtractionPerformance(textArray);
             long featureTime = System.currentTimeMillis() - startTime;
-            
+
             // Test model evaluation performance (simulated)
             startTime = System.currentTimeMillis();
             testModelEvaluationPerformance(textArray, factory);
             long modelTime = System.currentTimeMillis() - startTime;
-            
-            logger.info(String.format("Size %d: Feature extraction=%dms, Model evaluation=%dms", 
+
+            logger.info(String.format("Size %d: Feature extraction=%dms, Model evaluation=%dms",
                        size, featureTime, modelTime));
         }
     }
-    
+
     private void testFeatureExtractionPerformance(String[] texts) {
         // Test feature extraction with real text data
         // This would use your GpuFeatureExtractor
@@ -231,14 +232,14 @@ public class OpenNLPTestDataIntegration {
             Thread.currentThread().interrupt();
         }
     }
-    
+
     private void testModelEvaluationPerformance(String[] texts, GpuModelFactory factory) {
         // Test model evaluation with real text data
         try {
             for (String text : texts) {
                 // Create context from text
                 String[] context = createContextFromText(text);
-                
+
                 // Simulate model evaluation
                 // In real implementation, this would use actual OpenNLP models
                 Thread.sleep(1); // Minimal delay to simulate processing
@@ -247,12 +248,12 @@ public class OpenNLPTestDataIntegration {
             Thread.currentThread().interrupt();
         }
     }
-    
+
     private String[] createContextFromText(String text) {
         // Create OpenNLP-style context features from text
         String[] tokens = text.toLowerCase().split("\\s+");
         List<String> context = new ArrayList<String>();
-        
+
         for (int i = 0; i < Math.min(tokens.length, 10); i++) {
             context.add("word=" + tokens[i]);
             if (i > 0) {
@@ -261,7 +262,7 @@ public class OpenNLPTestDataIntegration {
             if (i < tokens.length - 1) {
                 context.add("next=" + tokens[i+1]);
             }
-            
+
             // Add simple features
             if (tokens[i].length() > 5) {
                 context.add("long_word");
@@ -273,47 +274,47 @@ public class OpenNLPTestDataIntegration {
                 context.add("has_number");
             }
         }
-        
+
         return context.toArray(new String[context.size()]);
     }
-    
+
     private void performanceComparisonTest(List<String> texts) {
         logger.info("Running GPU vs CPU performance comparison...");
-        
+
         // Test with GPU enabled
         config.setGpuEnabled(true);
         GpuModelFactory gpuFactory = new GpuModelFactory(config);
-        
+
         long gpuStartTime = System.currentTimeMillis();
         runModelTestSuite(texts, gpuFactory, "GPU");
         long gpuTime = System.currentTimeMillis() - gpuStartTime;
-        
+
         // Test with GPU disabled (CPU only)
         config.setGpuEnabled(false);
         GpuModelFactory cpuFactory = new GpuModelFactory(config);
-        
+
         long cpuStartTime = System.currentTimeMillis();
         runModelTestSuite(texts, cpuFactory, "CPU");
         long cpuTime = System.currentTimeMillis() - cpuStartTime;
-        
+
         // Calculate and report speedup
         double speedup = (double) cpuTime / gpuTime;
-        logger.info(String.format("Performance Results: CPU=%dms, GPU=%dms, Speedup=%.2fx", 
+        logger.info(String.format("Performance Results: CPU=%dms, GPU=%dms, Speedup=%.2fx",
                    cpuTime, gpuTime, speedup));
-        
+
         // Reset GPU config
         config.setGpuEnabled(true);
     }
-    
+
     private void runModelTestSuite(List<String> texts, GpuModelFactory factory, String mode) {
         logger.info("Running test suite in " + mode + " mode...");
-        
+
         // Process subset of texts for timing
         int maxTexts = Math.min(50, texts.size());
         for (int i = 0; i < maxTexts; i++) {
             String text = texts.get(i);
             String[] context = createContextFromText(text);
-            
+
             // Simulate model operations
             try {
                 // In real implementation, this would use actual models
@@ -324,29 +325,29 @@ public class OpenNLPTestDataIntegration {
             }
         }
     }
-    
+
     private void batchProcessingTest(List<String> texts) {
         logger.info("Testing batch processing capabilities...");
-        
+
         int batchSize = 10;
         int numBatches = Math.min(5, texts.size() / batchSize);
-        
+
         for (int batch = 0; batch < numBatches; batch++) {
             int startIdx = batch * batchSize;
             int endIdx = Math.min(startIdx + batchSize, texts.size());
-            
+
             List<String> batchTexts = texts.subList(startIdx, endIdx);
-            
+
             long startTime = System.currentTimeMillis();
             processBatch(batchTexts);
             long batchTime = System.currentTimeMillis() - startTime;
-            
-            logger.info(String.format("Batch %d (%d texts): %dms (%.2fms per text)", 
-                       batch + 1, batchTexts.size(), batchTime, 
+
+            logger.info(String.format("Batch %d (%d texts): %dms (%.2fms per text)",
+                       batch + 1, batchTexts.size(), batchTime,
                        (double) batchTime / batchTexts.size()));
         }
     }
-    
+
     private void processBatch(List<String> batchTexts) {
         // Process a batch of texts
         for (String text : batchTexts) {
@@ -360,30 +361,30 @@ public class OpenNLPTestDataIntegration {
             }
         }
     }
-    
+
     /**
      * Run complete integration test suite
      */
     public static void main(String[] args) {
         OpenNLPTestDataIntegration integration = new OpenNLPTestDataIntegration();
-        
+
         try {
             // Run all integration tests
             integration.runRealModelTests();
-            
+
             // Run additional GPU-specific tests
             GpuTestSuite testSuite = new GpuTestSuite();
             GpuTestSuite.TestResults results = testSuite.runAllTests();
-            
+
             System.out.println("\n=== Integration Test Results ===");
             System.out.println(results.getReport());
-            
+
             if (results.allPassed()) {
                 System.out.println("✅ All integration tests passed!");
             } else {
                 System.out.println("⚠️ Some integration tests failed");
             }
-            
+
         } catch (Exception e) {
             System.err.println("Integration tests failed: " + e.getMessage());
             e.printStackTrace();
